trying to fix some spacing issues

--- a/src/css/tease.less
+++ b/src/css/tease.less
@@ -6,6 +6,10 @@
         color: #b31c27;
     }
 
+    ul {
+        margin-bottom: 10px;
+    }
+
     h4 a {
         font-family: Georgia,Serif;
         font-size: 1.2em;
